corrected layout issues, converted some css to tw

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,10 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
   font-family: 'Work Sans', sans-serif;
-  --webkit-font-smoothing: antialiased;
-  --moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
-  color: #f5f5f5;
+  /* background: #4ca1af;
+  background-blend-mode: overlay; */
+  color: #f7f7f7;
 }
 
 body::--webkit-scrollbar {
@@ -19,8 +17,9 @@ body::--webkit-scrollbar {
 
 h1,
 h2 {
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 800;
+  font-family: 'Mulish';
+  font-weight: 900;
+  color: #f5f5f5;
 }
 input:focus,
 button:focus {
@@ -32,131 +31,186 @@ button:focus {
 }
 
 .app {
-  width: 100%;
-  margin: 0 auto 1rem auto;
-  max-width: 1200px;
+  -webkit-mask-image: radial-gradient(ellipse farthest-side at 75% 10%, black, transparent);
+}
+.shows {
+  background: linear-gradient(to bottom, #2776C6, #2a272a);
 }
 
-.app__featured {
-  padding: 12rem 3rem 5rem 3rem;
-  width: 100%;
-  background: linear-gradient(to top, #695e96, #3a3452);
+.hero__overlay {
+  -webkit-mask-image: radial-gradient(ellipse farthest-side at 75% 10%, black, transparent);
 }
 
-.app__overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 75%;
-  height: 38rem;
-  mix-blend-mode: overlay;
-  -webkit-mask-image: radial-gradient(
-    ellipse farthest-side at 75% 10%,
-    rgba(0, 0, 0, 1),
-    transparent
-  );
-  pointer-events: none;
-  z-index: 10;
-}
-
-.app__featuredImg {
-  background-size: cover;
-  background-position: top right;
-}
-.app__featuredInfo {
-  margin: 0;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.app__featuredTitle {
-  font-weight: 700;
-  max-width: 840px;
-}
-
-.app__featuredGenres {
-  text-transform: uppercase;
-  font-size: 0.95rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 4px;
-  font-weight: 500;
-  color: #fff;
-}
-
-.app__seriesSeasons {
-  text-transform: uppercase;
-  font-size: 0.95rem;
-  margin: 0;
-  margin-top: 1rem;
-  font-weight: 500;
-}
-
-.app__featuredGenre:not(:last-of-type):after {
-  content: ', ';
-}
-
-.app__featuredCert {
-  padding: 0.25rem 0.5rem;
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid #fff;
-  border-radius: 5px;
-  margin-right: 0.5rem;
-  margin-left: -4px;
-}
-
-.app__featuredYear {
-  font-size: 1.5rem;
-  margin-left: 0.75rem;
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 400;
-  opacity: 0.5;
-}
-
-.app__featuredDesc {
-  width: 45%;
-}
-
-.app__featuredDesc a {
+.textTruncate a {
   opacity: 0.5;
   transition: opacity 0.1s ease;
 }
-
-.app__featuredDesc a:hover {
+.textTruncate :hover a {
   opacity: 1;
 }
 
-.app__featuredRating {
+/* Trending Movies */
+.list__trending {
+  flex: 0 0 calc(100% - 400px - 2rem);
+  -webkit-mask-image: linear-gradient(to right, black 80%, transparent 100%);
+}
+
+.list__items {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-snap-type: x mandatory;
+}
+.list__items::-webkit-scrollbar {
+  background-color: transparent;
+  display: none;
+}
+
+
+.list__items > .list__item {
+  flex: 0 0 300px;
+  height: 200px;
+  margin: 1rem;
+  background: linear-gradient(to center, #3a3452, #695e96);
+  scroll-snap-align: start;
+  border-radius: 1rem;
+  overflow: hidden;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px -1px, rgba(0, 0, 0, 0.14) 0 4px 5px 0,
+    rgba(0, 0, 0, 0.12) 0 1px 10px 0;
+  cursor: pointer;
+}
+
+.list__items > .list__item + .list__item {
+  margin-left: 1rem;
+}
+
+.list__item > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.1);
+  transition: all 0.25s ease-out;
+}
+
+.list__item:hover > img {
+  transform: scale(1);
+}
+
+.list__item::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(ellipse farthest-side at 0 100%, #3a3452, transparent);
+  background-size: 150% 150%;
+  background-position: 0 0;
+  top: 0;
+  left: 0;
+  transition: all 0.2s;
+  z-index: 1;
+}
+
+.list__item:hover::before {
+  background-position: 0% 100%;
+}
+
+.list__item__info {
+  position: absolute;
+  left: 0;
+  bottom: -6rem;
+  padding: 1rem;
+  z-index: 9;
+  width: 100%;
+  transition: bottom 0.2s ease-in;
+}
+
+.list__item:hover .list__itemInfo {
+  bottom: 0;
+}
+
+.list__itemTitle {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 95%;
+  margin-bottom: 1.25rem;
+  transition: margin-bottom 0.2s ease-out;
+}
+
+.list__item:hover .list__itemTitle {
+  margin-bottom: 0.5rem;
+}
+
+.list__itemYear {
+  font-size: 0.85rem;
+  margin-left: 0.5rem;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 400;
+  opacity: 0.75;
+  color: #f5f5f5;
+}
+
+.list__itemOverview {
+  height: 2.4rem;
+  overflow: hidden;
+}
+
+.list__item .movieRating {
+  transform-origin: 0 0;
+  transform: scale(0.9);
+  margin-left: -4px;
+}
+
+.list-rating {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
 }
 
-.MuiRating-iconEmpty {
-  color: rgba(255, 255, 255, 0.5) !important;
+.list__likes {
+  margin: 0 0 8px - 8px;
 }
 
-.app__featuredLikes {
-  margin: 0 0 8px 0.5rem;
+.list__genreList {
+  flex: 0 0 250px;
 }
 
-.app__button {
-  border-radius: 99px !important;
-  color: #695e96 !important;
-  font-weight: 500 !important;
-  font-family: 'Work Sans', sans-serif !important;
-  background-color: rgb(255, 255, 255) !important;
+.list__genres {
+  display: flex;
+  flex-flow: row wrap;
 }
 
-.app__button:hover {
-  background-color: rgb(215, 215, 215) !important;
+.list__genres > .app__button {
+  /* color: #2c3e50 !important; */
+  color: #3a3452;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  transition: all 0.2s ease-out !important;
 }
 
-.shows {
-  background: linear-gradient(to top, #695e96, #3a3452);
+.list__genres:hover > .app__button {
+  transform: scale(0.95);
+  opacity: 0.5;
 }
 
-.layoutRoot {
-  background: linear-gradient(to top, #695e96, #3a3452);
+.list__genres > .app__button:hover {
+  transform: scale(1.1);
+  background-color: #fff !important;
+  opacity: 1;
+}
+
+@media (max-width: 550px) {
+  .list {
+    padding: 1rem 1.5rem;
+    flex-flow: column nowrap;
+  }
+
+  .list__trending {
+    flex: 0 0 100%;
+    margin-right: 0;
+  }
+
+  .list__genreList {
+    flex: 0 0 100%;
+    margin-top: 2rem;
+  }
 }
